# ramont

./: .gitignore  Dockerfile  go.mod  go.sum  main.go  makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
cmd/ramont/: main.go
html/: index.html
pyramont/: pyproject.toml
pyramont/pyramont/: fake_device.py  fake_mouse.py
pyramont/tests/: test_pyramont.py
ramont/: events.go  server.go  transport.go  websockets.go
ramont-rs/: Cargo.toml
ramont-rs/src/: evdev_example.rs  lib.rs  main.rs
ramont-rs/src/ramont/: device.rs  mod.rs  server.rs
ramont/network/: tcp.go
ramont/websockets/: websockets.go
static/: index.html
ts/src/: app.ts
unix-input-socket/: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt  display.c  example.c  queue.c  queue.h  queue_test.c  unix_socket.c
unix-input-socket/src/: CMakeLists.txt  event.c  event.h  example.c  path.c  path.h  queue_test.c  uv_socket.c
unix-input-socket/src/cramont/: cramont.c  cramont.h
unix-input-socket/src/path/: path.c
unix-input-socket/src/queue/: queue.c  queue.h
unix-input-socket/tests/: CMakeLists.txt  main.c
websockets/: websockets.go
