[tool.poetry]
name = "pyramont"
version = "0.1.0"
description = ""
authors = ["William Bezuidenhout <william.bezuidenhout+github@gmail.com>"]

[tool.poetry.scripts]
pyramont-server = 'pyramont.fake_mouse:cli'

[tool.poetry.dependencies]
python = "^3.8"
libevdev = "^0.9"
xlib = "^0.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
